[tool.poetry]
name = "fit-file-visualizer"
version = "0.1.0"
description = "Visualize endurance sports training data"
authors = ["Tori Wuthrich <tori.wuthrich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
polars = "^0.19.19"
numpy = "^1.26.2"
fitdecode = "^0.10.0"
ipykernel = "^6.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
